# structuretoolkit

./: .coveralls.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.ci_support/: build_notebooks.sh  check.py  condamerge.py  environment-docs.yml  environment-dscribe.yml  environment-lammps.yml  environment-mini.yml  environment-old.yml  environment.yml  environment_mini.yml  release.py
.github/: asdf.ipynb  dependabot.yml  developVoronoiFeaturiser.ipynb
.github/workflows/: UpdateDependabotPR.yml  automerge.yml  black.yml  dependabot.yml  deploy.yml  mini.yml  pipeline.yml  push-pull-main.yml  pypicheck.yml  unittests.yml  unittests_old.yml
binder/: environment.yml  postBuild
docs/: _config.yml  _toc.yml  api.rst  conf.py  environment.yml  index.rst
notebooks/: introduction.ipynb
src/structuretoolkit/: __init__.py  _version.py  visualize.py
src/structuretoolkit/analyse/: __init__.py  dscribe.py  neighbors.py  phonopy.py  pyscal.py  snap.py  spatial.py  strain.py  symmetry.py
src/structuretoolkit/common/: helper.py  pymatgen.py
structuretoolkit/: __init__.py  _version.py  helper.py  visualize.py
structuretoolkit/analyse/: __init__.py  clustering.py  distance.py  dscribe.py  fitsnap.py  line.py  neighbors.py  phonopy.py  pymatgen.py  pyscal.py  snap.py  spatial.py  strain.py  symmetry.py
structuretoolkit/common/: __init__.py  error.py  helper.py  phonopy.py  pymatgen.py  pyscal.py
tests/: test_aimsgb.py  test_aimsgb_mocked.py  test_analyse.py  test_analyse_distance.py  test_analyse_phonopy.py  test_analyse_symmetry.py  test_ase.py  test_build_surface.py  test_compound.py  test_coverage_extended.py  test_dscribe.py  test_dscribe_mocked.py  test_fitsnap.py  test_geometry.py  test_helpers.py  test_high_index_surface.py  test_materialsproject.py  test_materialsproject_mocked.py  test_mesh.py  test_neighbors.py  test_phonopy_mocked.py  test_pymatgen.py  test_pymatgen_mocked.py  test_pyscal.py  test_pyscal_mocked.py  test_pyxtal.py  test_sklearn_mocked.py  test_snap.py  test_snap_extended.py  test_snap_mock.py  test_sqs.py  test_sqs_helpers.py  test_sqs_mocked.py  test_strain.py  test_strain_mocked.py  test_surface_mocked.py  test_symmetry.py  test_symmetry_mocked.py  test_visualize.py  test_visualize_extended.py
tests/benchmark/: __init__.py
tests/integration/: __init__.py
tests/unit/: test_aimsgb.py  test_strain.py
