[build-system]
requires = ["ase", "numpy", "setuptools", "scipy", "versioneer[toml]==0.29"]
build-backend = "setuptools.build_meta"

[project]
name = "structuretoolkit"
description = "build, analyse and visualise atomistic structures for materials science"
authors = [
    { name = "Jan Janssen", email = "janssen@mpie.de" },
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["pyiron"]
requires-python = ">=3.9, <3.13"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "ase==3.24.0",
    "numpy==1.26.4",
    "scipy==1.15.2",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/pyiron/structuretoolkit"
Documentation = "https://github.com/pyiron/structuretoolkit"
Repository = "https://github.com/pyiron/structuretoolkit"

[project.optional-dependencies]
dscribe = ["dscribe==2.1.1"]
grainboundary = [
    "aimsgb==1.1.1",
    "pymatgen==2025.2.18",
]
pyscal = ["pyscal3==3.2.7"]
nglview = ["nglview==3.1.4"]
matplotlib = ["matplotlib==3.10.1"]
plotly = ["plotly==6.0.0"]
clusters = ["scikit-learn==1.6.1"]
symmetry = ["spglib==2.5.0"]
surface = [
    "spglib==2.5.0",
    "pymatgen==2025.2.18",
]
phonopy = [
    "phonopy==2.38.0",
    "spglib==2.5.0",
]
pyxtal = ["pyxtal==1.0.6"]

[tool.setuptools.packages.find]
include = ["structuretoolkit*"]

[tool.setuptools.dynamic]
version = {attr = "structuretoolkit.__version__"}

[tool.ruff]
exclude = [".ci_support", "tests", "setup.py", "_version.py"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-comprehensions
    "C4",
    # eradicate
    "ERA",
    # pylint
    "PL",
]
ignore = [
    # ignore functions in argument defaults
    "B008",
    # ignore exception naming
    "B904",
    # ignore line-length violations
    "E501",
    # ignore equality comparisons for numpy arrays
    "E712",
    # ignore bare except
    "E722",
    # ignore ambiguous variable name
    "E741",
    # Too many arguments in function definition
    "PLR0913",
    # Magic value used in comparison
    "PLR2004",
    # Too many branches
    "PLR0912",
    # Too many statements
    "PLR0915",
]

[tool.versioneer]
VCS = "git"
style = "pep440-pre"
versionfile_source = "structuretoolkit/_version.py"
parentdir_prefix = "structuretoolkit"
tag_prefix = "structuretoolkit-"
